--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             background: url(images/bg-cover_01.jpg) left top fixed;
             background-size: cover;
         }
-        .container-camp { max-width: 960;}
+        .container-camp { max-width: 960px;}
     </style>
   </head>
   <body>
